tests/tooling/fixtures/native/recovery/negative/negative_conditional_condition_function_value.objc3
// Expected diagnostic code(s): O3S206.
module NegativeConditionalConditionFunctionValue;

fn ready() -> bool {
  return true;
}

fn main() -> i32 {
  let x = ready ? 1 : 0;
  return x;
}
